src/widget.scss
//
//	Base styling for CSS
//	Use BEM at a single level to allow devs to style with higher specifity if required.
//
//	Need to review design
//

$light-grey: #d0d0d0;
$grey: #c0c0c0;
$red: #d97400;
$dark-grey: #3d3d3d;
$top-boundary: 740px;
.czw {
  --title: 40px;
  --label: 16px;

  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center; // center column horizontally
  width: 100%;
  max-width: 950px;
  overflow: hidden;
  border: 1px solid $light-grey;
  border-radius: 12px;
  font-size: var(--label);

  @media (min-width: $top-boundary) {
    flex-direction: row;
    align-items: stretch; // ensure row items fill columns
    justify-content: space-between; // center widget horizontally
    margin: 0 auto;
  }

  * {
    box-sizing: border-box;
  }

  &__title {
    width: 100%;
    height: 10vh;
    padding: 20px 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;

    @media (min-width: $top-boundary) {
      padding: 20px 25px 25px;
      flex-direction: column;
      justify-content: flex-start;
    }

    &__text {
      font-size: var(--title);
    }

    &__date {
      margin-top: 10px;
    }
  }

  &__graph {
    width: 100%;
    height: 65vh;
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    padding: 20px 20px 40px;
    border-bottom: 1px solid $dark-grey;

    @media (min-width: 430px) {
      height: 70vh;
    }

    @media (min-height: 800px) {
      // for tablets / ipad
      height: 500px;
    }

    @media (min-width: $top-boundary) {
      width: 58%;
      height: auto;
      border-right: 1px solid $dark-grey;
      border-bottom: none;
    }

    &__selector {
      display: flex;
      justify-content: space-between;
      align-items: center;
      height: 35px;
      width: 40%;
      min-width: 150px;
      border: 1px solid $dark-grey;
      border-radius: 5px;

      &__text {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100%;
        width: 50%;
        cursor: pointer;
        color: $dark-grey;

        &.active {
          display: flex;
          justify-content: center;
          align-items: center;
          height: 100%;
          width: 50%;
          background-color: $dark-grey;
          color: $light-grey;
          pointer-events: none;
          border-radius: 3px;
        }
      }
    }

    &__wrapper {
      position: relative;
      height: 100%;
      max-height: 500px;
      width: 100%;

      .chart2000,
      .chart20 {
        position: absolute;
        width: 100%;
        height: 100%;
      }

      .chart20 {
        visibility: hidden;
      }
      @media (min-width: $top-boundary) {
        height: 250px;
      }
    }

    &__labels {
      position: absolute; // position on top of chart
      top: 0;
      left: 0;
      height: 100%;
      width: 100%;

      &--x {
        width: 100%;

        .czw__graph__labels__label {
          top: 100%;
          color: $dark-grey;

          &--first {
            left: 0;
          }

          &--mid {
            left: 50%;
            transform: translateX(-50%);
          }

          &--end {
            right: 0;
          }
        }
      }

      &--y {
        .czw__graph__labels__label {
          background: #fff;
          padding-right: 6px;
          transform: translateY(-175%);
        }
      }

      &__label {
        position: absolute;
        color: $grey;
      }
    }

    &__latest {
      position: absolute;
      top: -3px;
      right: -2px;
      display: block;
      height: 9px;
      width: 9px;

      border: 2px solid $red;
      border-radius: 50%;
      background: #fff;
      opacity: 0;
      animation: show 0.5s linear 1.75s forwards,
        flash 0.5s linear 2s infinite forwards;
    }
  }

  &__stats {
    width: 100%;
    height: 160px;
    display: flex;
    flex-direction: column;
    flex-shrink: 0;

    @media (min-width: 430px) {
      flex-direction: row;
      height: 120px;
    }

    @media (min-width: $top-boundary) {
      max-width: 300px;
      width: 27.5%;
      height: auto;
      flex-direction: column;
    }

    &__top {
      width: 100%;
      height: 70%;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      color: $dark-grey;

      @media (min-width: 430px) {
        width: 60%;
        height: 100%;
      }

      @media (min-width: $top-boundary) {
        width: 100%;
        height: 60%;

        &--avg {
          border-bottom: 1px solid $dark-grey;
        }
      }

      &--avg {
        height: 40%;
        width: 100%;
        flex-direction: row;
        justify-content: space-around;

        @media (min-width: $top-boundary) and (max-width: 900px) {
          flex-direction: column;
          justify-content: center;
        }
      }

      &--sclabel {
        width: 240px;
        height: auto;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
      }

      &--scale {
        height: 60%;
        width: 240px;
        display: flex;
        align-items: center;
        justify-content: center;
        svg {
          margin-top: 3px;
          min-height: 30px;
          max-height: 40px;
          width: 80%;
          max-width: 220px;
        }
      }
      @media (min-width: 740px) and (max-width: 890px) {
        &--sclabel,
        &--scale {
          width: 90%;
        }
      }
    }

    &__bottom {
      display: flex;
      flex: 1;
      align-items: center;
      justify-content: space-around;
      color: $dark-grey;

      @media (min-width: 430px) {
        padding: 2.5px 0px;

        flex-direction: column;
      }

      @media (min-width: $top-boundary) {
        width: 100%;
        justify-content: center;
        align-items: flex-start;
        margin-left: 10px;
      }
    }

    &__label {
      text-transform: uppercase;
    }

    &__sclabel {
      padding: 0px 5px;
    }

    &__avg-value {
      color: black;
    }

    &__value {
      color: black;
      @media (min-width: 430px) {
        color: $dark-grey;
        margin-top: 10px;
        font-size: var(--title);
      }
    }
  }

  polyline {
    stroke-dasharray: 1000;
    stroke-dashoffset: 1000;
    animation: dash 3s linear forwards;
  }
}

@keyframes dash {
  to {
    stroke-dashoffset: 0;
  }
}

@keyframes flash {
  from {
    background: #fff;
  }
  to {
    background: $red;
  }
}

@keyframes show {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

